crates/edm-core/tests/snapshots/render__sweep_narrow_w60.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== SWEEP RESULTS  2 markets ================================
+------------+------------------+------+------+-----+------+
|  Market ID | Name             | HTTP | Comm | Dem | EDDN |
+============+==================+======+======+=====+======+
| 3229028096 | Jameson Memorial |  200 |  112 |  51 | sent |
| 3223343616 | Abraham Lincoln  |  429 |    - |   - | -    |
+------------+------------------+------+------+-----+------+
   columns hidden to fit 60 cols: Try, Sup
