crates/edm-core/tests/snapshots/render__sweep_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== SWEEP RESULTS  3 markets — 1 failed =============================================================
+------------+----------------------------+------+------+-----+-----+------------------------+-----+
|  Market ID | Name                       | HTTP | Comm | Sup | Dem | EDDN                   | Try |
+============+============================+======+======+=====+=====+========================+=====+
| 3229028096 | Jameson Memorial Fleet La~ |  200 |  112 |  44 |  51 | sent                   |   1 |
| 3223343616 | Hutton Orbital Deep Space~ |  500 |    - |   - |   - | 500 Internal Server E~ |   4 |
| 3700286976 | K7Q-BQL Carrier Nostromo   |  200 |    8 |   0 |   8 | 202 Accepted body was~ |   2 |
+------------+----------------------------+------+------+-----+-----+------------------------+-----+
