crates/edm-core/tests/snapshots/render__sweep_wide_w48.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== SWEEP RESULTS  3 markets — 1 failed =========
+------------+-------------------+------+------+
|  Market ID | Name              | HTTP | Comm |
+============+===================+======+======+
| 3229028096 | Jameson Memorial~ |  200 |  112 |
| 3223343616 | Hutton Orbital D~ |  500 |    - |
| 3700286976 | K7Q-BQL Carrier ~ |  200 |    8 |
+------------+-------------------+------+------+
   columns hidden to fit 48 cols: Try, Sup, Dem,
   EDDN
