crates/edm-core/tests/snapshots/render__sweep_wide_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== SWEEP RESULTS  3 markets — 1 failed =========================================
+------------+--------------+------+------+-----+-----+------------------------+
|  Market ID | Name         | HTTP | Comm | Sup | Dem | EDDN                   |
+============+==============+======+======+=====+=====+========================+
| 3229028096 | Jameson Mem~ |  200 |  112 |  44 |  51 | sent                   |
| 3223343616 | Hutton Orbi~ |  500 |    - |   - |   - | 500 Internal Server E~ |
| 3700286976 | K7Q-BQL Car~ |  200 |    8 |   0 |   8 | 202 Accepted body was~ |
+------------+--------------+------+------+-----+-----+------------------------+
   columns hidden to fit 80 cols: Try
